--- a/examples/dashboard.html
+++ b/examples/dashboard.html
@@ -80,6 +80,12 @@
               </a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="details.html">
+                <i class="ni ni-bullet-list-67 text-default"></i>
+                <span class="nav-link-text">Details</span>
+              </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="login.html">
                 <i class="ni ni-key-25 text-info"></i>
                 <span class="nav-link-text">Login</span>
