--- a/examples/icons.html
+++ b/examples/icons.html
@@ -80,6 +80,12 @@
               </a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="details.html">
+                <i class="ni ni-bullet-list-67 text-default"></i>
+                <span class="nav-link-text">Details</span>
+              </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="login.html">
                 <i class="ni ni-key-25 text-info"></i>
                 <span class="nav-link-text">Login</span>
@@ -241,8 +247,7 @@
               </nav>
             </div>
             <div class="col-lg-6 col-5 text-right">
-              <a href="#" class="btn btn-sm btn-neutral">New</a>
-              <a href="#" class="btn btn-sm btn-neutral">Filters</a>
+              <a href="#" class="btn btn-sm btn-neutral">Anything here!</a>
             </div>
           </div>
         </div>
