--- a/examples/dashboard.html
+++ b/examples/dashboard.html
@@ -130,7 +130,7 @@
                   <a href="create_customer.html" class="list-group-item list-group-item-action">
                     <span class="ml-4 menu-collapsed">Add new customer</span>
                   </a>
-                  <a href="#" class="list-group-item list-group-item-action">
+                  <a href="list_customers.html" class="list-group-item list-group-item-action">
                     <span class="ml-4 menu-collapsed">View customers</span>
                   </a>
                 </div>
